# vecadd

./: CMakeLists.txt  cwk3.c  cwk3.cl  cwk3tt.cl  helper.h  helper_cwk.h  main.c  vectorAddition.c  vectorAddition.cl
